# sdl-tutorial

./: .gitignore  CMakeLists.txt  HelloSDL  ccls-generate.sh  clean.sh  hello_SDL.cpp  rebuild.sh
src/: hello_SDL.cpp
